--- a/_includes/block_quotes.html
+++ b/_includes/block_quotes.html
@@ -1,5 +1,9 @@
-<div id="random_quotes_block" class="block">
-    <div id="random_quotes" class="entries">
+<div id="quotes_section_container">
+    <div class="container">
+        <div id="random_quotes_block" class="block">
+            <div id="random_quotes" class="entries">
+            </div>
+        </div>
     </div>
 </div>
 
