--- a/_includes/block_slideshow_announcements.html
+++ b/_includes/block_slideshow_announcements.html
@@ -1,4 +1,8 @@
-<div id="announcements_block" class="block block_margin_top block_default_fonts">
+<div id="announcement_section_container">
+    <div class="container">
+        <div id="announcements_block" class="block block_margin_top block_default_fonts">
+        </div>
+    </div>
 </div>
 
 <script>
