--- a/_sass/announcement.scss
+++ b/_sass/announcement.scss
@@ -1,13 +1,27 @@
+#announcement_section_container {
+    & > div.container {
+        @include min-screen(480px + 1px)  {
+            width: 50%;
+            max-width: 50%;
+        }
+        @include min-screen(768px + 1px)  {
+            width: 100%;
+            max-width: 100%;
+        }
+        @include max-screen(720px)  {
+            width: 100%;
+            max-width: 100%;
+        }
+        height: auto;
+        min-height: auto;
+    }
+}
 
 #announcements_block {
     @media print {
         display: none;
     }
     @include max-screen(720px) {
-        margin-top: 20px;
-    }
-    min-height: 160px;
-    @include max-screen(720px) {
-        min-height: 200px;
+        margin-top: 20px !important;
     }
 }
