--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -1,10 +1,28 @@
+#quotes_section_container {
+    & > div.container {
+        @include min-screen(480px + 1px)  {
+            width: 50%;
+            max-width: 50%;
+        }
+        @include min-screen(768px + 1px)  {
+            width: 100%;
+            max-width: 100%;
+        }
+        @include max-screen(480px)  {
+            width: 100%;
+            max-width: 100%;
+        }
+        height: auto;
+        min-height: auto;
+    }
+}
+
 #random_quotes_block {
     @media print {
         display: none;
     }
 
     @include min-screen(720px + 1px) {
-        // Override top padding since this component is at the top
         padding-top: 0px;
     }
 }
