Change label fonts

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -108,8 +108,8 @@ $font_size_caption:             11px;
 $font_line_height_caption:      14px;
 
 // Label
-$font_label:                    $font_sans;
-$font_size_label:               11px;
+$font_label:                    $font_sans_thin;
+$font_size_label:               12px;
 
 // Page and Post
 $font_page_title:                   $font_heading;
