--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -1,18 +1,6 @@
 
 
 
-div.section_container_wrapper {
-    & > div.section_container {
-        & > div.container {
-            & > p {
-                font-family: $font_default;
-                font-size: $font_size_default + 1;
-                line-height: $font_line_height_default + 1;
-                color: $color_text;
-            }
-        }
-    }
-}
 
 form.style_one input#search_input {
 
@@ -63,6 +51,27 @@ form.style_one input#search_input {
     }
 }
 
+#search_section_container {
+    & > div.section_container {
+        & > div.container {
+            // Heights for the index page has been fixed.
+            // Override the settings here.
+            height: auto !important;
+            min-height: auto !important;
+            width: 100%;
+            min-width: 100%;
+            & > p {
+                font-family: $font_default;
+                font-size: $font_size_default + 1;
+                line-height: $font_line_height_default + 1;
+                color: $color_text;
+            }
+        }
+    }
+    // Make padding equal to paragraph bottom padding
+    padding-bottom: 12px;
+}
+
 // Overrides tipue settings
 div#tipue_search_content {
 
@@ -81,7 +90,7 @@ div#tipue_search_content {
 
     #tipue_search_results_count {
         @include set_font($font_hub_default_excerpt, $font_size_hub_default_excerpt, $color_hub_entry_excerpt);
-        padding-bottom: 15px;
+        padding-bottom: 10px;
     }
 
     & > div.tipue_search_content_title {
