Update display styles

--- a/_includes/info_index.html
+++ b/_includes/info_index.html
@@ -14,18 +14,18 @@ Example:
 
 {% assign counter = 1 %}
 
-<div class="section_container_wrapper section_container_wrapper_border container_bottom_margin_10">
-<h1>{{ include.title }}</h1>
-<div class="section_container container_top_margin_10 container_bottom_margin_10">
-    <div class="block block_default_fonts">
-        <div class="entries">
-    {% for post in include.posts %}
-            <div class="entry index_entry">
-                <h2 class="indexed"><span>{{ counter }}</span><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
-                {% assign counter = counter | plus: 1 %}
+<div class="section_container_wrapper section_container_wrapper_border bottom_margin_10">
+    <h1>{{ include.title }}</h1>
+    <div class="section_container top_margin_10 bottom_margin_10">
+        <div class="block block_default_fonts">
+            <div class="entries">
+        {% for post in include.posts %}
+                <div class="entry index_entry">
+                    <h2 class="indexed"><span>{{ counter }}</span><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
+                    {% assign counter = counter | plus: 1 %}
+                </div>
+        {% endfor %}
             </div>
-    {% endfor %}
         </div>
     </div>
-</div>
 </div>
