--- a/_includes/head.html
+++ b/_includes/head.html
@@ -133,7 +133,7 @@
     <script src="{{ site.baseurl }}/javascripts/moment.js"></script>
     <script src="{{ site.baseurl }}/javascripts/tooltip.js"></script>
     <!-- For search.json -->
-    {% if site.development %}
+    {% if site.debug %}
     <script src="{{ site.baseurl }}/javascripts/tipuesearch_content.js"></script>
     {% endif %}
     <!-- After customization, do not forget to compress the javascript file -->
