--- a/_includes/todo_list.html
+++ b/_includes/todo_list.html
@@ -6,7 +6,7 @@ Example:
     {% include todo_list.html todo_data=todo %}
 {% endcomment %}
 
-{% if site.development %}
+{% if site.debug %}
 <div class="section_container_wrapper section_container_wrapper_border">
     <h1>TODO</h1>
 <div class="section_container top_margin_10 bottom_margin_10">
