--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -35,7 +35,7 @@
             <a href="/">{{ site.title }}</a>
         </li>
 
-        {% if site.development %}
+        {% if site.debug %}
         <li class="dropdown right">
             <a href="/info/" class="dropdown_link">Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></a>
             <div class="dropdown_content dropdown_content_right">
