--- a/_includes/post_entry.html
+++ b/_includes/post_entry.html
@@ -31,7 +31,7 @@ Argument(s):
 
             <h2><a href="{{ include.post.url }}.html">{{ include.post.title }}</a></h2>
             <p class="date">{{ post.date | date: site.data.format.date_only }}</p>
-            {% if site.development %}
+            {% if site.debug %}
             <p class="category">Categories:&nbsp;{{ post.categories | join: ", " }}</p>
             {% endif %}
             <p class="excerpt">
