--- a/_includes/block_quotes.html
+++ b/_includes/block_quotes.html
@@ -1,4 +1,4 @@
-<div id="quotes_section_container">
+<div id="quotes_section_container" class="section_container_wrapper">
     <div class="container">
         <div id="random_quotes_block" class="block">
             <div id="random_quotes" class="entries">
