Move category peace_process under topics

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -14,7 +14,7 @@
                 <a href="/news/other/">Other News</a>
                 <hr>
                 <a href="/topics/opinion">Opinions</a>
-                <a href="/news/peace_process/">Peace Process</a>
+                <a href="/topics/peace_process/">Peace Process</a>
                 <hr>
                 <a href="/search/">Search</a>
                 <hr>
