Update thumbnail image display

--- a/_includes/post_entry.html
+++ b/_includes/post_entry.html
@@ -1,6 +1,7 @@
 {% comment %}
 Argument(s):
     - post
+    - post_image
 {% endcomment %}
 
 <div class="block block_margin_bottom block_default_fonts">
@@ -8,23 +9,23 @@ Argument(s):
         <div class="entry entry_highlight">
 
             {% if site.debug %}
-                {% if include.post.image.source %}
-            <img src="/images/offline/thumbnail_image.png"  class="image_thumbnail img_style_rounded"/>
+                {% if include.post.video.source %}
+            <img src="/images/offline/thumbnail_post_image.png"  class="image_thumbnail img_style_rounded"/>
                 {% else %}
                     {% if include.post.video.source %}
-            <img src="/images/offline/thumbnail_video.png" class="video_thumbnail img_style_rounded"/>
+            <img src="/images/offline/thumbnail_post_video.png" class="video_thumbnail img_style_rounded"/>
                     {% else %}
-            <img src="/images/offline/thumbnail_twitter_card.png"  class="image_thumbnail img_style_rounded"/>
+            <img src="/images/offline/thumbnail_category_image.png" class="video_thumbnail img_style_rounded"/>
                     {% endif %}
                 {% endif %}
             {% else %}
                 {% if include.post.image.source %}
-            <img src="{{ site.image_source }}{{ include.post.image.source }}"  class="image_thumbnail img_style_rounded"/>
+            <img src="{{ site.image_source }}/post/{{ include.post.image.source }}" class="image_thumbnail img_style_rounded"/>
                 {% else %}
                     {% if include.post.video.source %}
             <img src="http://img.youtube.com/vi/{{ include.post.video.source }}/mqdefault.jpg" class="video_thumbnail img_style_rounded"/>
                     {% else %}
-            <img src="{{ site.image_source }}/site/{{ include.post_image }}" class="image_thumbnail img_style_rounded"/>
+            <img src="{{ site.image_source }}/site/{{ include.post_image }}"  class="image_thumbnail img_style_rounded"/>
                     {% endif %}
                 {% endif %}
             {% endif %}
