Update info sections

--- a/_includes/info_index.html
+++ b/_includes/info_index.html
@@ -7,7 +7,7 @@ Arguments:
 Example:
     {% assign posts = site.info_company | sort: "title" %}
     {% assign todo = site.data.news_peace_process %}
-    {% include section_index.html title="Companies" todo_data=todo posts=posts %}
+    {% include info_index.html title="Companies" todo_data=todo posts=posts %}
 {% endcomment %}
 
 {% include todo_list.html todo_data=include.todo_data %}
@@ -20,6 +20,9 @@ Example:
         <div class="block block_default_fonts">
             <div class="entries">
         {% for post in include.posts %}
+            {% if post.development %}
+                {% continue %}
+            {% endif %}
                 <div class="index_entry">
                     <h2 class="indexed"><span>{{ counter }}</span><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
                     {% assign counter = counter | plus: 1 %}
