--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -16,6 +16,8 @@
                 <a href="/topics/opinion">Opinions</a>
                 <a href="/topics/peace_process/">Peace Process</a>
                 <hr>
+                <a href="/info/">Information</a>
+                <hr>
                 <a href="/search/">Search</a>
                 <hr>
 
